--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,6 @@ src/components/NavTop/NavTop.css.map
 
 src/container/Livros/Livros.css
 src/components/NavTop/NavTop.css.map
+src/container/Livros/Livros.css
+src/components/NavTop/NavTop.css.map
+src/components/NavTop/NavTop.jsx
