Eventos HTML + CSS

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,8 @@ src/components/NavTop/NavTop.css.map
 src/container/Livros/Livros.css
 src/components/NavTop/NavTop.css.map
 src/components/NavTop/NavTop.jsx
+src/container/Servicos/Servicos.css
+src/components/NavTop/NavTop.css.map
+src/container/Livros/Livros.css
+src/container/Servicos/Servicos.css.map
+src/styles/Body.css.map
