--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ src/components/NavTop/NavTop.css.map
 src/container/Livros/Livros.css
 src/container/Servicos/Servicos.css.map
 src/styles/Body.css.map
+src/assets/event01.png
+src/assets/event02.png
+src/assets/event03.png
