--- a/.gitignore
+++ b/.gitignore
@@ -21,25 +21,9 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-src/assets/logo.png
-src/container/Livros/Livros.css.map
-src/container/Livros/Livros.css
-src/assets/book01.webp
-src/assets/book02.jpg
-src/assets/book03.webp
-src/assets/book04.webp
-src/components/NavTop/NavTop.css.map
 
-src/container/Livros/Livros.css
-src/components/NavTop/NavTop.css.map
-src/container/Livros/Livros.css
-src/components/NavTop/NavTop.css.map
-src/components/NavTop/NavTop.jsx
-src/container/Servicos/Servicos.css
-src/components/NavTop/NavTop.css.map
-src/container/Livros/Livros.css
-src/container/Servicos/Servicos.css.map
-src/styles/Body.css.map
-src/assets/event01.png
-src/assets/event02.png
-src/assets/event03.png
+*.css
+*.css.map
+*.webp
+*.png
+*.jpg
